--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ blinker==1.4
 certifi==2018.11.29
 chardet==3.0.4
 Click==7.0
+coverage==4.5.2
 Flask==1.0.2
 Flask-DebugToolbar==0.10.1
 Flask-SQLAlchemy==2.3.2
@@ -11,13 +12,13 @@ itsdangerous==1.1.0
 Jinja2==2.10
 MarkupSafe==1.1.0
 oauthlib==3.0.1
+pkg-resources==0.0.0
 psycopg2-binary==2.7.5
 requests==2.21.0
+requests-cache==0.4.13
 requests-oauthlib==1.2.0
 requests-toolbelt==0.8.0
 six==1.12.0
 SQLAlchemy==1.2.8
 urllib3==1.24.1
 Werkzeug==0.14.1
-
-
